# mango-mdconverter

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/: .gitignore  README.qmd
src/mango-mdconverter/: md2dict.py
src/mango_mdconverter/: md2dict.py
tests/: test_conversion.py  test_md2dict.py
