[build-system]
requires = ["setuptools>67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "mango-mdconverter"
description = "ManGO metadata conversion"
readme = "README.md"
requires-python = ">=3.8"
version = "1.0.2"
license = {file = "LICENSE"}
authors = [
    { name = "Mariana Montes", email = "mariana.montes@kuleuven.be" },
    { name = "Paul Borgermans", email = "paul.borgermans@kuleuven.be" },
]

[project.urls]
repository = "https://github.com/kuleuven/mango-mdconverter"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ['mango_mdconverter', 'mango_mdconverter.*']

[tool.pylint."messages control"]
disable = ["too-many-arguments"]

[tool.pylint.reports]
output-format = ["colorized"]

[tool.pytest.ini_options]
pythonpath = ["src"]
